[package]
name = "sqlio"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["functions", "loadable_extension", "trace", "vtab"] }
